fidoconfig 0.10
---------------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Sat May 27 10:21:30 NOVST 2000
max:
* dupe base type set to hashdupes with msgid as default
* remove dupeSize (unused)
* loglevels documentation

----- cvs ci ------
Thu May 25 15:22:21 NOVST 2000
max:
* check if path already have been parsed (fix possible memory leaks)

----- cvs ci ------
Wed May 24 00:15:52 CEST 2000
mtt:
* fixed fidoInst
	
----- cvs ci ------
Tue May 23 22:36:28 NOVST 2000
max (patch from Lev Serebryakov):
* added tokens ConvertShortNames, ConvertLongNames for htick
	
----- cvs ci ------
Mon May 22 14:03:38 CEST 2000
mtt:
* made some release adjustements
* changed version to numer 0.10

----- cvs ci ------
Mon May 22 11:40:00 NOVST 2000
max:
* autoPause added to docs
* uppercase area's group for Golded (patch from Alex Bronin)

----- cvs ci ------
Wed May 17 18:39:00 UTC 2000
sms:
* fixed double deallocation of viaStr in new routing code

----- cvs ci ------
Wed May 17 21:40:28 NOVST 2000
max (patch from Alex Bronin):
* added token busyFileDir for htick
* added -sendorig option to filearea

----- cvs ci ------
Wed May 15 07:39:00 UTC 2000
sms:
* using direxist() from smapi instead of readdir in parsePath()

----- cvs ci ------
Tue May 16 20:28:45 NOVST 2000
max:
* fix route parsing in the middle of the links

----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Sun May  7 14:55:32 MSD 2000
max (patch from Serguei Revtov):
* add tossingExt token

----- cvs ci ------
Tue Apr 25 19:04:15 NOVST 2000
max:
* backward compatibility for my last changes

----- cvs ci ------
Mon Apr 24 16:35:03 NOVST 2000
max:
* small fix in e_writeCheck
* now possible create two links with the same aka and
  different our aka and link them to different areas.
  if own useAka of area and ourAka used for link not
  the same -- there is no export & import...

----- cvs ci ------